--- a/MoscowWeather.Core/MoscowWeather.Core.csproj
+++ b/MoscowWeather.Core/MoscowWeather.Core.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -11,6 +11,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.8" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.15" />
+		<PackageReference Include="DotNetCore.NPOI" Version="1.2.3" />
 		<PackageReference Include="System.IO.Packaging" Version="5.0.0" />
 	</ItemGroup>
 </Project>
