--- a/MoscowWeather/appsettings.json
+++ b/MoscowWeather/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-TKKKLMA; Initial Catalog=Weather; Trusted_Connection = true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
